# Radartiktokshop

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  download_screens.py  package.json  pyproject.toml  seed_75_products.py  stitch_landing_page.html
.aiox-core/: core-config.yaml  install-manifest.yaml  package-lock.json  package.json  version.json
.aiox-core/cli/: index.js
.aiox-core/quality/: metrics-collector.js  seed-metrics.js
apps/: __init__.py
apps/api/: __init__.py  deps.py  garage_router.py  main.py  media_router.py  schemas.py
apps/dashboard/: __init__.py  app.py  read_adapter.py  router.py
data/: produtos_br.json  produtos_br_v2.json
docs/: ADVISORY_MVP_STRATEGY.md  AI_INTEGRATION_STRATEGY.md  agents.md  architecture.md  backlog.md  branding-documentation-plan.md  component-specification-plan.md  design-system-documentation-architecture.md  domain-model.md  implementation-plan.md  prd.md  project-tracker.md  prompt tiktokshop.md  roadmap.md  runbook-local.md  scoring-model.md  setup.md  source-governance.md  testing.md
docs/stories/: 1.1.foundation-bootstrap.md  MVP_TASKPLAN.md  (+27 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ingestion/: __init__.py  __main__.py  config.py  pipeline.py  storage.py
ranking/: __init__.py  cli.py  filters.py  models.py  report.py  service.py
scoring/: __init__.py  aggregator.py  calibration.py  factors.py  gmv_estimator.py  lifecycle.py  models.py  saturation_model.py
scripts/: fix_theme.py  seed_mock_scores.py  seed_ranking_cache.py  translate_titles.py
services/: __init__.py
stitch_files/: laboratorio_angulos.html  minha_garagem.html  radar_semanal.html  raio_x_produto.html
tests/: conftest.py  test_aggregator.py  test_calibration.py  test_dashboard.py  test_factors.py  test_pipeline.py  test_pytrends_client.py  test_radar_cli.py  test_report.py  test_service.py  test_tiktok_oauth.py  test_tiktok_shop_client.py  test_transformers.py
(+230 files in other folders)
